<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal|center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/game_score"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/gameScore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/score_zero"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
            </LinearLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/appBarLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="2">

            <ImageView
                android:id="@+id/boxRed"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/red"
                android:layout_weight="1"
                android:background="@color/red"
                tools:ignore="NestedWeights" />

            <ImageView
                android:id="@+id/boxBlue"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/blue"
                android:layout_weight="1"
                android:background="@color/blue"
                tools:ignore="NestedWeights" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="2">

            <ImageView
                android:id="@+id/boxYellow"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/yellow"
                android:layout_weight="1"
                android:background="@color/yellow"
                tools:ignore="NestedWeights" />

            <ImageView
                android:id="@+id/boxGreen"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/green"
                android:layout_weight="1"
                android:background="@color/green"
                tools:ignore="NestedWeights" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>