<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <TextView
        android:id="@+id/token_title"
        android:background="@color/black"
        android:textAlignment="center"
        android:textStyle="bold"
        android:paddingTop="9dp"
        android:paddingBottom="9dp"
        android:paddingStart="9dp"
        android:text="@string/ins"
        android:paddingEnd="9dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/token_desc"
        android:layout_below="@+id/token_title"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:text="@string/ins_desc"
        android:layout_marginBottom="20dp"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="80dp"
        android:paddingEnd="80dp"
        android:layout_below="@+id/token_desc">
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:textSize="16sp"
            android:layout_weight="1"
            android:id="@+id/token_ok"
            android:textStyle="bold"
            android:gravity="center_vertical|center_horizontal"
            android:layout_marginBottom="20dp"
            android:background="@color/green"
            android:textColor="#ffffffff"
            tools:ignore="ButtonStyle" />

    </LinearLayout>
</RelativeLayout>